<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.albums.AlbumsFragment">

    <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            app:elevation="0dp"
            android:layout_height="?actionBarSize">

        <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                app:title="@string/title_albums_reference"
                app:layout_scrollFlags="scroll|enterAlways|snap"
                android:theme="@style/AppTheme.Toolbar">

            <com.facebook.drawee.view.SimpleDraweeView
                    android:id="@+id/toolbarAvatar"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="end"
                    android:layout_marginEnd="10dp"
                    app:placeholderImage="@drawable/placeholder_avatar_black"
                    app:roundedCornerRadius="30dp"/>
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swipeRefresh"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <dev.ihsan.upgur.ui.widget.LceeView
                android:id="@+id/lceeView"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <ProgressBar
                    android:layout_width="wrap_content"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"/>

            <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                    app:spanCount="2"
                    android:padding="4dp"
                    android:clipToPadding="false"/>

            <tr.xip.errorview.ErrorView
                    android:id="@+id/errorView"
                    android:padding="16dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:ev_title="@string/label_albums_cant_load"
                    app:ev_subtitle="@string/message_albums_cant_load"
                    android:layout_gravity="center"
                    android:theme="@style/AppTheme.ErrorView"/>

            <tr.xip.errorview.ErrorView
                    android:padding="16dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:ev_image="@drawable/ic_empty_state_100dp"
                    app:ev_title="@string/label_albums_no_items"
                    app:ev_subtitle="@string/message_albums_no_items"
                    app:ev_retryVisible="false"
                    android:layout_gravity="center"
                    android:theme="@style/AppTheme.ErrorView"/>
        </dev.ihsan.upgur.ui.widget.LceeView>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/userDetailsSheet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            android:background="?colorAccent"
            app:layout_behavior="@string/bottom_sheet_behavior"
            app:behavior_hideable="true"
            app:elevation="16dp"
            app:behavior_skipCollapsed="true"
            android:clickable="true">

        <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

            <com.facebook.drawee.view.SimpleDraweeView
                    android:id="@+id/bottomSheetAvatar"
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    app:placeholderImage="@drawable/placeholder_avatar_white"
                    app:roundedCornerRadius="30dp"/>

            <Space
                    android:layout_width="16dp"
                    android:layout_height="0dp"/>

            <TextView
                    android:id="@+id/username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Username"
                    android:textSize="18sp"
                    android:fontFamily="@font/nunito_bold"
                    android:textColor="@android:color/white"
                    android:layout_weight="1"/>

            <com.google.android.material.button.MaterialButton
                    android:id="@+id/logoutButton"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    app:icon="@drawable/ic_logout_white_24dp"
                    app:rippleColor="@android:color/white"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.coordinatorlayout.widget.CoordinatorLayout>